<resources>
    <string name="app_name">CrowdBeat</string>
    <string name="crowdbeat_title">Event Name</string>
    <string name="shuffle_playlist">Shuffle Playlist</string>
    <string name="event_name">Event Name</string>
    <string name="song_title">Song Title</string>
    <string name="like_button">Like Button</string>
    <string name="drag_song">Drag Song</string>

    <!-- Add other missing strings here -->

    <!--Main Page-->
    <string name="question_message_text">Are you a host or guest?</string>
    <string name="host_button_text">Host</string>
    <string name="guest_button_text">Guest</string>

    <!--Common-->
    <string name="back_button_text">Back</string>

    <!--Host Page-->
    <string name="create_room_button_text">Create Room</string>
    <string name="regenerate_code_button_text">Regenerate Code</string>

    <string name="enter_event_name1_text">Enter Event Name:</string>
    <string name="enter_event_name2_text">Enter Event Name</string>

    <!--Guest Page-->
    <string name="join_button_text">Join</string>

    <string name="enter_join_code_text">Enter Join Code:</string>
    <string name="enter_5_digit_code_text">Enter 5-digit Code</string>

    <string name="add_song">Add Song</string>

    <!-- Message when no song is playing -->
    <string name="no_song_playing">No song playing</string>

    <!-- Description for the play/pause button -->
    <string name="play_pause">Play/Pause</string>

    <string name="title_activity_remote_java">SDK Remote jv</string>
    <string name="title_activity_remote_kotlin">SDK Remote kt</string>

    <!-- Errors -->
    <string name="err_spotify_disconnected">"Spotify is not Connected. Use one of the 'connect' buttons"</string>
    <string name="err_generic_toast">An error has occurred. Check the logs to know more.</string>

    <!-- Connect Auth -->
    <string name="connect">Connect</string>
    <string name="authorize">Connect and Authorize</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>

    <!-- Controls -->
    <string name="on_demand_feedback">Can play on demand? %1$b</string>
    <string name="is_in_collection_feedback">Is in the user collection? %1$s</string>
    <string name="command_feedback">"'%1$s' command successful!"</string>
    <string name="command_response">"'%1$s' command response"</string>
    <string name="connect_switch_to_local">Switch to Local Playback</string>
    <string name="play_podcast_button_label">Play podcast</string>
    <string name="play_album_button_label">Play album</string>
    <string name="play_artist_button_label">Play artist</string>
    <string name="play_playlist_button_label">Play playlist</string>
    <string name="play_track_button_label">Play track</string>
    <string name="get_collection_state">Get Collection state</string>
    <string name="save_uri">Save to Collection</string>
    <string name="remove_uri">Remove from Collection</string>
    <string name="browse_content">Browse Content</string>
    <string name="subscribe_to_capabilities">Get Capabilities</string>
    <string name="subscribe_to_current_track">Subscribe to playerstate</string>
    <string name="subscribe_to_player_context">Subscribe to playercontext</string>
    <string name="title_player_context">Player Context</string>
    <string name="title_current_track">Current Track</string>
    <string name="title_image_size">Image size</string>
    <string name="title_image_scale_type">Scale type</string>
</resources>