<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/crowdbeat_background_v2">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <!-- "Enter Event Name" Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="50dp"
        android:text="@string/enter_event_name1_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!-- Event Name Input -->
    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="#A7A7A9"
        android:hint="Event Name"
        android:padding="12dp"
        android:inputType="text" />

    <!-- Random 5-Digit Code TextView -->
    <TextView
        android:id="@+id/randomCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!-- Regenerate Code Button -->
    <Button
        android:id="@+id/regenerateCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/randomCodeTextView"
        android:layout_marginTop="16dp"
        android:text="@string/regenerate_code_button_text" />

    <!-- Create Room Button -->
    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/regenerateCodeButton"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_room_button_text" />

</RelativeLayout>
